@@ -16,6 +16,7 @@ ChangeLog for hostapd
 	* fixed WEP authentication (both Open System and Shared Key) with
 	  mac80211
 	* added support for EAP-AKA' (draft-arkko-eap-aka-kdf)
+	* added support for using driver_test over UDP socket
 
 2008-11-23 - v0.6.6
 	* added a new configuration option, wpa_ptk_rekey, that can be used to
